title存入redux完成交互

--- a/踩雷特辑.md
+++ b/踩雷特辑.md
@@ -1,5 +1,13 @@
 前端小白的极致体验，不看攻略手写一个react后台管理
 
+* 关于redux
+
+想要获取redux中的数据，写在connect的state和方法参数中，调用：this.props.参数/方法名
+
+容器组件想要冲redux中取值。state=>{一般和后面是一样的：state.reducer的Index中定义的名字} ,方法通过action引入
+
+写在class组件中的参数，需要是表达式 state={a:***}, 调用：this.state.a
+
 2021.5.21
 
 测试服务器好用 开始写代码
@@ -210,6 +218,7 @@ const { addDecoratorsLegacy} = require('customize-cra');
 
 4. token过期之后，自动返回登录页面。逻辑完成在响应拦截器里 （store.dispatch就是在和redux交互）
 
+5. 
 
 ## 写Admin的整体布局
 
@@ -250,7 +259,7 @@ const { addDecoratorsLegacy} = require('customize-cra');
      }
    ```
 
-   当切换页面时，即头部卸载的时候，要把定时器停掉，写在
+   当切换页面时，即头部卸载的时候，要把定时器停掉，写在willUnmount
 
 7. 头部天气：
 
@@ -292,3 +301,146 @@ export const reqWeather = ()=>{
 让非路由组件使用路由组件的API，动态获取路由名称，{this.props.location.pathname}
 
 header不是路由组件，就是将非路由组件渲染成路由组件（这也是个高阶组件）
+
+### 从路径中对应到Title
+
+循环遍历，找path和配置对象中的key有没有一致的情况
+
+```js
+getTitle = (()=>{
+    let pathKey = this.props.location.pathname.split('/').reverse()[0]
+    let title = ''
+    menuList.forEach ((item)=>{
+      if(item.children instanceof Array){
+        let res = item.children.find ((childItem)=>{
+          return childItem.key == pathKey
+        })
+        if(res) title =res.title;
+      }else{
+        if(item.key ==pathKey)  title = item.title
+      }
+    })
+    // return title;
+    // 直接维护到class中的state里 完整写法：this.setState({title：title})
+    this.setState({title})
+  })
+```
+
+* 当想要获得title的时候要调用getTitle方法，因为并无点击事件等调用，需要title的时候调用方法为：getTitle()
+
+  注意加括号才能调用
+
+————————————————————————————
+
+5.26
+
+## 侧边栏
+
+1. 静态布局：Antd引入即可，引入静态资源注意不能到src外（脚手架的规定），所以在src下建立一个static文件夹
+
+2. 引入react-router-dom 中的Link 做自动切换 <Link to="/admin/home">
+
+3. 自动生成菜单，写成一个递归的方法 ，这样多级菜单也可以直接动态渲染
+
+   ```jsx
+       createMenu=(target)=>{
+           return(
+               target.map((item)=>{
+                   if(!item.children){
+                       return(
+                         <Item key={item.key} icon = {iconConfigMap[item.icon]}>
+                             <Link to={item.path}>
+                                 <span>{item.title}</span>
+                             </Link>
+                         </Item>
+                       )
+                   }else{
+                       return(
+                           <SubMenu key={item.key} icon = {iconConfigMap[item.icon]} title={item.title} >
+                               {this.createMenu(item.children)}
+                           </SubMenu>
+                       )
+                   }
+               }
+               )
+           )
+       }
+   ```
+
+   ### 问题：如何动态渲染组件
+
+   jsx中无法用模板字符串读取组件，只能将Icon的配置写在JSX文件中
+
+   ```jsx
+   // left_nav.jsx
+   const iconConfigMap = {
+       'HomeOutlined':<HomeOutlined />,
+     }
+   return(
+       icon = {iconConfigMap[item.icon]}
+   )
+   // config.js
+   export default[
+     {
+       title: '首页', // 菜单标题名称
+       key: 'home', // 对应的path
+       icon: 'HomeOutlined',
+       path: '/admin/home'//对应路径
+     }]
+   
+   ```
+
+   
+
+4. 使用withrouter动态获取路径
+
+   ```jsx
+   defaultSelectedKeys={this.props.location.pathname.split('/').reverse()[0]} //默认选中
+   ```
+
+   pathname获得路径，拆分之后翻转数组拿到第一个就是之前的最后一个
+
+   这样刷新页面还会停留在原页面，不会按照默认选中跳转到别处
+
+5. 选中子菜单的时候，刷新之后默认打开父级菜单
+
+   ```jsx
+   defaultOpenKeys={this.props.location.pathname.split('/').splice(2)} //默认打开
+   ```
+
+## 从路径中获取Title的问题
+
+* 由于一直从路径中获取的Title，再加上Home页面开启了一个定时器用来实现秒表，所以每秒钟都会重新渲染页面，为了优化这个问题，我们要把title保存在redux中，如果直接存在state里，并在didUpdate方法中调用getTitle(),会出现挂载的时候的死循环，更新state---挂载---更新state,所以只能写在redux里。为leftNav中的Item添加点击事件，每次点击将所在的title存入redux
+
+* 重复一下流程：
+
+  1. 给left_nav中的item加点击事件，定义点击事件，在点击事件中与redux完成通信
+
+  2. 要通信，把left_nav改写为容器组件，引入connect，connect中存在状态和方法两个参数
+
+  3. 既然有方法参数，那么就要引入action,新建action文件，写action文件自然要改写Action-types
+
+  4. 写对应的reducer, reducer写更新state的方法，但是写完记得去index内汇总
+
+  5. 将一开始的点击事件和redux中定义的方法合并一下，onClick事件不能写小括号，但是需要传参，所以用箭头函数再包一层
+
+  ```jsx
+    <Item key={item.key} icon = {iconConfigMap[item.icon]} onClick={()=>{
+      this.props.saveTitle(item.title)
+    }}>
+  ```
+
+  6. 然后记得给引用的位置改为容器组件，通过redux中connect组件将数据更新至state ，通过this.props.参数 完成渲染
+
+  7. 最后要完成刷新还能保存路径的逻辑，在getTitle函数中，不返回title，而是将title维护到class的state中的title属性中，注意！不是connect中的state，是类中的是state，connect中的是redux中的值。
+
+  8. 在didMount方法中调用getTitle()，注意！如果是在didUpdate中调用会出现死循环（见上）
+
+  9. 渲染的时候，redux中的title有值，渲染这个title，若为空则说明刚刚刷新，去class中的state中获取计算出来的title，因为每次刷新会执行didMount
+
+     ```jsx
+     {this.props.title||this.state.title}
+     ```
+
+     
+
