--- a/踩雷特辑.md
+++ b/踩雷特辑.md
@@ -410,7 +410,7 @@ getTitle = (()=>{
 
 ## 从路径中获取Title的问题
 
-* 由于一直从路径中获取的Title，再加上Home页面开启了一个定时器用来实现秒表，所以每秒钟都会重新渲染页面，为了优化这个问题，我们要把title保存在redux中，如果直接存在state里，并在didUpdate方法中调用getTitle(),会出现挂载的时候的死循环，更新state---挂载---更新state,所以只能写在redux里。为leftNav中的Item添加点击事件，每次点击将所在的title存入redux
+* 由于一直从路径中获取的Title，再加上Home页面开启了一个定时器用来实现秒表，所以每秒钟都会重新渲染页面，为了优化这个问题，我们要把title保存在redux中，如果直接存在state里，并在didUpdate方法中调用getTitle(),会出现挂载的时候的死循环，更新state---挂载---更新state,所以 只能写在redux里。为leftNav中的Item添加点击事件，每次点击将所在的title存入redux
 
 * 重复一下流程：
 
@@ -436,11 +436,68 @@ getTitle = (()=>{
 
   8. 在didMount方法中调用getTitle()，注意！如果是在didUpdate中调用会出现死循环（见上）
 
-  9. 渲染的时候，redux中的title有值，渲染这个title，若为空则说明刚刚刷新，去class中的state中获取计算出来的title，因为每次刷新会执行didMount
+  9. 渲染的时候，redux中的title有值，渲染这个title，若为空则说明刚刚刷新，去class中的state中获取计算出来的title，因为每次刷新会执行didMount，就是redux有读redux效率高，redux没有就去路径中计算title,存入state
 
      ```jsx
      {this.props.title||this.state.title}
      ```
 
-     
+————————————————————————————
 
+5.29 摸鱼了两天
+
+## Category页面
+
+1. antd的card+ table写静态页面
+
+2. 开始交互，发一个get请求，页面一挂载就开始发送请求，但是不要给生命周期钩子加async，所以在外部定义一个异步函数，在钩子里调用
+
+3. 给每个数据加一个key 组件库要求有key,数据库存的是ID。当然可以直接改Table组件的属性！淦！
+
+4. 如果想动态给点击窗口起名字，定义一个变量存入class的state中，然后点击事件更改这个state的值，在给属性赋值的时候直接从state身上读取
+
+5. 关于Form表单的一些修改，如  formRef = React.createRef();  <Form ref={this.formRef} \> 还是仔细看文档比较好
+
+6. ANTD中 组件的有一些奇奇怪怪的设定 自己尝试吧。如果想要修改就
+
+7. 开始发请求，请求成功后，新增之后记得从class.state中读回数据，解构赋值之后将新数据加在数组的**最前面**
+
+   然后将数据维护回 state 然后隐藏弹窗，重置表单
+
+   ```jsx
+         let categoryList = [...this.state.categoryList] // 解构赋值
+         categoryList.unshift(data) // 将新数据加在数组的**最前面**
+         this.setState({categoryList,visible: false}) //将数据维护回 state 然后隐藏弹窗
+         this.formRef.current.resetFields(); // 重置表单
+   ```
+
+   之所以把后两步写在添加的逻辑里面，如果不写在这里，会出现后台请求出错之后（符合前端校验规则但是不符合数据库更细规则）弹窗依然会消失的问题
+
+8. 总结就是所有需要动态维护的内容都存入 class的state中
+
+
+
+
+
+
+
+
+
+
+
+————————————————————————————
+
+## 关于警告
+
+1. ```
+   scheduler.development.js:298 [Deprecation] SharedArrayBuffer will require cross-origin isolation as of M91, around May 2021. See https://developer.chrome.com/blog/enabling-shared-array-buffer/ for more details.
+   ```
+
+   * 解决方案
+
+   ```
+   yarn upgrade react --latest
+   yarn upgrade react-dom --latest
+   ```
+
+   
